Updated to pass the ui-test

--- a/package.json
+++ b/package.json
@@ -67,15 +67,13 @@
       "vue"
     ],
     "transform": {
-      ".*\\.(vue)$": "vue-jest",
-      "^.+\\.js$": "<rootDir>/node_modules/babel-jest",
-      ".*\\.(vue)$": "<rootDir>/node_modules/vue-jest"
+      ".*\\.(vue)$": "<rootDir>/node_modules/vue-jest",
+      "^.+\\.js$": "<rootDir>/node_modules/babel-jest"
     },
     "moduleNameMapper": {
       "^@/(.*)$": "<rootDir>/src/$1",
       "^vue$": "vue/dist/vue.common.js"
     },
-    
     "snapshotSerializers": [
       "<rootDir>/node_modules/jest-serializer-vue"
     ]
